Adding sorting algos

--- a/.gitignore
+++ b/.gitignore
@@ -109,6 +109,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+input/
 
 # Spyder project settings
 .spyderproject
@@ -124,6 +125,7 @@ venv.bak/
 .mypy_cache/
 .dmypy.json
 dmypy.json
+*.bat
 
 # Pyre type checker
 .pyre/
@@ -131,3 +133,4 @@ dmypy.json
 # IDE
 .idea/
 .vscode/
+.ipynb_checkpoints/
